Crash with decimate modifier #33689

Closed
opened 2012-12-28 09:28:02 +01:00 by Mikhail Rachinskiy · 5 comments

%%%Hi,

Open attached blend file and switch Decimate modifier mode to Planar => crash

Thanks,

Platform:


Windows 7 x32

OpenGL:


  • Renderer: ATI Radeon HD 4770
  • Vendor: ATI Technologies Inc.
  • Version: 3.3.11653 Compatibility Profile Context

Blender:


Version: 2.65 (sub 3)
Revision: 53352%%%

%%%Hi, Open attached blend file and switch Decimate modifier mode to Planar => crash Thanks, Platform: **** Windows 7 x32 OpenGL: **** - Renderer: ATI Radeon HD 4770 - Vendor: ATI Technologies Inc. - Version: 3.3.11653 Compatibility Profile Context Blender: **** Version: 2.65 (sub 3) Revision: 53352%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%btw I have a tiny request, could we have a default value of "Angle Limit" property set at 1 degree? Becuz 15 deg is waaaaay to high for hi-poly.%%%

%%%btw I have a tiny request, could we have a default value of "Angle Limit" property set at 1 degree? Becuz 15 deg is waaaaay to high for hi-poly.%%%

%%%fixed r53521.

changed the default to 5deg. r53523. I think 1 is too low.%%%

%%%fixed r53521. changed the default to 5deg. r53523. I think 1 is too low.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%Thanks!%%%

%%%Thanks!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33689
No description provided.